[metadata]
name = faro-common
author = WakeMakin Development House L.L.C.
author-email = ridley@wakemakin.com
summary = Common functions
description-file = README.rst
license = Private
home-page = http://github.com/Wakemakin/faro-common
classifier = 
    Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python


[files]
packages = 
    faro_common


[hooks]
setup-hooks = 
    pbr.hooks.setup_hook

